# Bsentinel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  PROGRESS.md  QUICKSTART.md  Readme.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
bsentinel/: __init__.py  _logging.py  _settings.py  exceptions.py
bsentinel/infrastructure/api/: __init__.py  __main__.py  root_app.py
bsentinel/settings/: base.py  local.py  production.py
docs/: FASE_1_COMPLETADA.md  first_idea.md
docs/features/: api_endpoints.feature  book_management.feature  data_retention.feature  error_handling.feature  openlibrary_integration.feature  price_history.feature  scraping_process.feature  site_configuration.feature
secrets/: .env.example
