[project]
name = "bsentinel"
version = "1.0.0"
description = "Sistema de rastreo de precios de libros mediante web scraping"
authors = [
    { name = "Erick Vergara", email = "erick@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.5",
    "python-json-logger==2.0.7",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "scrapy>=2.12.0",
    "scrapy-rotating-proxies>=0.6.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
    "pytest-bdd>=7.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
